// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LensFieldIcon accepts FieldIcon props 1`] = `
<FieldIcon
  className="lnsFieldListPanel__fieldIcon"
  fill="none"
  type="date"
/>
`;

exports[`LensFieldIcon renders properly 1`] = `
<FieldIcon
  className="lnsFieldListPanel__fieldIcon"
  type="date"
/>
`;
